# metodos_numericos_Python

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  algoritmo_lineal.py  congruencial_aditivo.py  congruencial_multiplicativo.py  docker-compose.yml  functions.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
Ecuaciones_diferenciales/: Punto1.py  Punto2.py  Punto3.py  Punto4.py  Punto5.py  Punto6.py  Punto7.py
Ecuaciones_diferenciales_derivadas_parciales/: punto1.py  punto2.py  punto3.py  punto4.py  punto5.py
Integrales/: Punto1.py  Punto2.py  Punto3.py  Punto4.py  Punto5.py
pseudoaleatorios/: .env.example  LICENSE  README.md  congruencial_cuadratico.py  cuadrados_medios.py  multiplicador_constante.py  productos_medios.py  pyproject.toml
pseudoaleatorios/src/pseudoaleatorios/: __init__.py  __main__.py
pseudoaleatorios/src/pseudoaleatorios/application/factories/: generator_factory.py
pseudoaleatorios/src/pseudoaleatorios/application/use_cases/: generate_sequence.py
pseudoaleatorios/src/pseudoaleatorios/domain/models/: generator_config.py
pseudoaleatorios/src/pseudoaleatorios/domain/ports/: generator.py
pseudoaleatorios/src/pseudoaleatorios/infrastructure/analysis/: statistics.py
pseudoaleatorios/src/pseudoaleatorios/infrastructure/config/: settings.py
pseudoaleatorios/src/pseudoaleatorios/infrastructure/generators/: _digit_utils.py  additive_congruential.py  constant_multiplier.py  linear_congruential.py  middle_products.py  middle_squares.py  multiplicative_congruential.py  quadratic_congruential.py
pseudoaleatorios/tests/: conftest.py
pseudoaleatorios/tests/application/: test_factory.py
pseudoaleatorios/tests/infrastructure/: test_generators.py
src/metodos_numericos/: __init__.py  __main__.py
src/metodos_numericos/application/factories/: solver_factory.py
tests/: conftest.py
tests/application/: test_factory.py
tests/infrastructure/solvers/: test_integral_solvers.py  test_ode_solvers.py
(+22 files in other folders)
