[project]
name = "pseudoaleatorios"
version = "1.0.0"
description = "Pseudorandom number generators — hexagonal architecture, Python 3.12+"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.4",
]

[project.scripts]
pseudoaleatorios = "pseudoaleatorios.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pseudoaleatorios"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/pseudoaleatorios --cov-report=term-missing -v"

[tool.mypy]
strict = true
python_version = "3.12"
mypy_path = "src"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]
